Working out Markbot issues, then on to adjusting spacing once more

--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,10 @@ html, body {
   overflow-x: hidden;
 }
 
+table {
+  display: none;
+}
+
 .img-flex {
   display: block;
   width: 100%;
@@ -40,6 +44,8 @@ header, figure {
   position: relative;
   left: 70px;
   top: 20px;
+  padding: 0;
+  margin: 0;
 }
 
 nav {
@@ -118,7 +124,7 @@ figure {
   position: relative;
 }
 
-figcaption {
+h3 {
   color: #fff;
   float: left;
   position: absolute;
@@ -130,7 +136,6 @@ footer {
   padding: 12em;
   margin-bottom: 2em;
 }
-
 
 small {
   color: #fff;
@@ -147,11 +152,6 @@ hr {
 
 h1 {
   display: none;
-}
-
-.web-title {
-  padding: 0;
-  margin: 0;
 }
 
 /*
@@ -317,7 +317,7 @@ For tour.html
 }
 
 .body-copy {
-  font-family: 'Asar', serif;
+  font-family: "Asar", serif;
 }
 
 .features-pic-two {
@@ -419,7 +419,7 @@ section {
 }
 
 .sign-up-small {
-  top:1990px;
+  top: 1990px;
 }
 
 .sign-up-credit {
@@ -753,10 +753,6 @@ form {
     padding: .3em;
   }
 
-  .main-nav {
-    right: 10px;
-  }
-
   .dropdown-menu {
     display: none;
   }
@@ -772,7 +768,6 @@ form {
 
   .second-img {
     width: 100%;
-    left: 0px;
   }
 
   .sign-up-one {
@@ -780,7 +775,6 @@ form {
     width: 50%;
     position: relative;
     top: -475px;
-    right: 0px;
   }
 
   form {
@@ -878,13 +872,8 @@ form {
     bottom: -429px;
   }
 
-  .tutorial-cap-main {
-    top: -400px;
-  }
-
   .fourth-img {
     width: 100%;
-    left: 0px;
     top: 50px;
   }
 
@@ -894,7 +883,6 @@ form {
     width: 100%;
     float: left;
     position: relative;
-    left: 0px;
     top: -5px;
   }
 
@@ -908,7 +896,7 @@ form {
     margin: 0;
     float: right;
     position: relative;
-    right: 40px;
+    right: 50px;
     top: 10px;
     width: 70%;
     display: block;
@@ -931,7 +919,7 @@ form {
 
   .tutorial-cap-main {
     left: 50px;
-    top: -350px;
+    top: -400px;
   }
 
   .tutorial-cap {
@@ -1087,13 +1075,11 @@ form {
 
   .main-nav {
     right: -280px;
-    top: 0px;
     font-size: 1.4em;
   }
 
   .main-img {
     width: 100%;
-    left: 0px;
   }
 
   .first-cap {
@@ -1205,7 +1191,6 @@ form {
 
   .third-img {
     width: 100%;
-    left: 0px;
   }
 
   .fifth-cap {
